--- a/Website/Home.html
+++ b/Website/Home.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="AboutUs.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Admissions</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
